--- a/2012-08-27-cfbag.md
+++ b/2012-08-27-cfbag.md
@@ -1,15 +1,14 @@
 ---
 layout: post
 title: CFBag
-
 ref: "https://developer.apple.com/library/mac/#documentation/CoreFOundation/Reference/CFMutableBagRef/Reference/reference.html"
 framework: CoreFoundation
 rating: 7.2
 published: true
-description: In the pantheon of collection data types in computer science, bag doesn't really have the same clout as lists, sets, associative arrays, trees, graphs, or priority queues. In fact, it's pretty obscure. You've probably never heard of it.
+description: "In the pantheon of collection data types in computer science, bag doesn't really have the same clout as lists, sets, associative arrays, trees, graphs, or priority queues. In fact, it's pretty obscure. You've probably never heard of it."
 ---
 
-Objective-C is a language caught between two worlds. 
+Objective-C is a language caught between two worlds.
 
 On one side, it follows the thoughtful, object-oriented philosophy of [Smalltalk](http://en.wikipedia.org/wiki/Smalltalk), which brings ideas like message sending and named parameters. On the other, are the inescapable vestiges of <a href="http://en.wikipedia.org/wiki/C_(programming_language)">C</a>, which brings it power and a dash of chaos.
 
@@ -86,7 +85,7 @@ However, toll-free bridging is the exception when it comes to collection classes
   </tbody>
   <tfoot>
     <tr>
-      <td colspan="3"><sup>*</sup> Indicates Mutable Counterpart</td> 
+      <td colspan="3"><sup>*</sup> Indicates Mutable Counterpart</td>
     </tr>
   </tfoot>
 </table>
@@ -95,7 +94,7 @@ Take a look at the second row, with `NSCountedSet` and `CFBag`. Notice that unli
 
 ## Bags, in the Abstract
 
-In the <a href="http://en.wikipedia.org/wiki/Collection_(abstract_data_type)">pantheon of collection data types</a> in computer science, bag doesn't really have the same clout as lists, sets, associative arrays, trees, graphs, or priority queues. 
+In the <a href="http://en.wikipedia.org/wiki/Collection_(abstract_data_type)">pantheon of collection data types</a> in computer science, bag doesn't really have the same clout as lists, sets, associative arrays, trees, graphs, or priority queues.
 
 In fact, it's pretty obscure. You've probably never heard of it.
 
@@ -105,7 +104,7 @@ Its practical applications are... limited, but you'll know one when it comes up.
 
 ## Working with `CFMutableBag`
 
-As an implementation of the bag data type, `CFBag` and its mutable counterpart, `CFMutableBag`, are pretty slick. 
+As an implementation of the bag data type, `CFBag` and its mutable counterpart, `CFMutableBag`, are pretty slick.
 
 Although it lacks the object-oriented convenience of `NSCountedSet`, it makes up for it with a number of ways to customize its behavior. When `CFBag` is created, it can be initialized with a number of callbacks, defined by the `CFBagCallBacks` struct, which specify the way values are inserted, removed, and compared:
 
@@ -127,7 +126,7 @@ typedef struct CFBagCallBacks CFBagCallBacks;
 - `equal`: callback used to compare values in the collection for equality
 - `hash`: callback used to compute hash codes for values in the collection
 
-For example, if you were implementing a vote tallying application, you could specify a normalizing function for `retain` to ensure that votes for mixed-case or misspelled names went to the right candidate, or ensure that the "correct" candidate is shown to be the winner when all the votes are in, with `equal` callback. 
+For example, if you were implementing a vote tallying application, you could specify a normalizing function for `retain` to ensure that votes for mixed-case or misspelled names went to the right candidate, or ensure that the "correct" candidate is shown to be the winner when all the votes are in, with `equal` callback.
 
 `CFMutableBag` also has `CFBagApplyFunction`, which has the ability to transform values over the collection, like if you wanted to smooth out vote counts, or something like that.
 
@@ -135,6 +134,6 @@ So in closing, if you need to rig an election, `CFBag` is your best bet.
 
 ---
 
-But seriously, `CFBag`, useful in its own right, serves as a reminder of the hidden gems to be found within the standard frameworks and libraries--indeed what is at the very heart of being an NSHipster. 
+But seriously, `CFBag`, useful in its own right, serves as a reminder of the hidden gems to be found within the standard frameworks and libraries--indeed what is at the very heart of being an NSHipster.
 
 Also, `CFBinaryHeap`? `NSPointerFunctions`? `NSMapTable`? Surely, you'll be seeing more of these in future editions.
