[Issue #83] Removing reference to NSProcessInfo

--- a/2013-09-23-ios7.md
+++ b/2013-09-23-ios7.md
@@ -8,7 +8,7 @@ description: "With the NDA finally lifted, we can finally talk about all of the 
 
 With the NDA finally lifted, we can finally talk about all of the amazing new APIs in iOS 7. And there are a _lot_ of them. "1500 new APIs", by Apple's count during the WWDC Keynote. (Granted, a good portion of that could just be all of the changes from `id` to `instancetype`, but that's a huge number, regardless).
 
-We'll be going over many of the new features iOS 7 in depth over the coming weeks, but with all of the excitement around this major release, this week's issue will hit on some of the gems hiding in plain sight: `NSData` Base64 encoding, `NSURLComponents`, `NSProgress`, `NSProcessInfo` activities, `CIDetectorSmile`, `CIDetectorEyeBlink`, `SSReadingList`, `AVCaptureMetaDataOutput`, `AVSpeechSynthesizer`, and `MKDistanceFormatter`.
+We'll be going over many of the new features iOS 7 in depth over the coming weeks, but with all of the excitement around this major release, this week's issue will hit on some of the gems hiding in plain sight: `NSData` Base64 encoding, `NSURLComponents`, `NSProgress`, `CIDetectorSmile`, `CIDetectorEyeBlink`, `SSReadingList`, `AVCaptureMetaDataOutput`, `AVSpeechSynthesizer`, and `MKDistanceFormatter`.
 
 ---
 
@@ -71,9 +71,9 @@ NSLog(@"%@", [progress localizedDescription]); // 42% completed
 ...or it can be given a handler for stopping work entirely:
 
 ~~~{objective-c}
-NSTimer *timer = [NSTimer timerWithTimeInterval:1.0 
-                                         target:self 
-                                       selector:@selector(incrementCompletedUnitCount:) userInfo:nil 
+NSTimer *timer = [NSTimer timerWithTimeInterval:1.0
+                                         target:self
+                                       selector:@selector(incrementCompletedUnitCount:) userInfo:nil
                                         repeats:YES];
 
 progress.cancellationHandler = ^{
@@ -114,8 +114,8 @@ In yet another free app idea, here's a snippet that might be used by a camera th
 
 ~~~{objective-c}
 CIDetector *smileDetector = [CIDetector detectorOfType:CIDetectorTypeFace
-                                context:context 
-                                options:@{CIDetectorTracking: @YES, 
+                                context:context
+                                options:@{CIDetectorTracking: @YES,
                                           CIDetectorAccuracy: CIDetectorAccuracyLow}];
 NSArray *features = [smileDetector featuresInImage:image options:@{CIDetectorSmile:@YES}];
 if (([features count] > 0) && (((CIFaceFeature *)features[0]).hasSmile)) {
@@ -201,7 +201,7 @@ Even though the number of people who have actually read something saved for late
 NSURL *URL = [NSURL URLWithString:@"http://nshipster.com/ios7"];
 [[SSReadingList defaultReadingList] addReadingListItemWithURL:URL
                                                         title:@"NSHipster"
-                                                  previewText:@"..." 
+                                                  previewText:@"..."
                                                         error:nil];
 ~~~
 
