--- a/2013-05-13-nscoding.md
+++ b/2013-05-13-nscoding.md
@@ -10,13 +10,13 @@ translator: "Yu Jin"
 
 在构建应用程序时，一个重要的架构决策问题是在每次启动之间如何持久化数据。问题是如何精准的重现最后一次关闭应用前的状态；如何描述对象图以使下次完美地重新构建。
 
-在 iOS 和 Mac OS X 上， 苹果提供了两种选择 ：[Core Data][1] or [`NSKeyedArchiver`][2] / [`NSKeyedUnarchiver`][3] （用来将遵循 `<NSCoding>` 的类序列化）
+在 iOS 和 Mac OS X 上， 苹果提供了两种选择 ：[Core Data][1] 或 [`NSKeyedArchiver`][2] / [`NSKeyedUnarchiver`][3] （用来将遵循 `<NSCoding>` 的类序列化）
 
 > 或者更确切地说：有三种选择，如果你算上`NSURLCache`的话. 在client-server应用场景下，在每次启动时加载必要的数据是一种可行的设计，尤其是结合磁盘缓存，存储服务器的响应，这样当发送对应请求的时候可以立即返回。在实践中，网络层和对象层上的缓存结合是可取的。
 
-当涉及到建模，查询，遍历，持久化复杂的对象图，那Core Data是无可代替的。Core Data 是把大锤子，但不是所有的问题都是最够大的钉子。
+当涉及到建模，查询，遍历，持久化复杂的对象图，那Core Data是无可代替的。Core Data 是把大锤子，但不是所有的问题都是足够大的钉子。
 
-Core Data 和 `NSKeyedArchiver`公平和常见的比较可能是这样的：
+Core Data 和 `NSKeyedArchiver`客观和常见的比较可能是这样的：
 
 <table id="figure-1" class="core-data-versus-nskeyedarchiver">
   <thead>
@@ -195,7 +195,7 @@ NSArray *books = [NSKeyedUnarchiver unarchiveObjectWithData:data];
 
 在应用程序中使用Core Data的决定或许是显而易见的。但是在很多情况下，Core Data 被发现是如此的笨拙或者不必要的，甚至是一种对可用性的障碍，更不用说实用性。
 
-即使很多应用在某些点_将_受益于Core Data，让事物从简单演化到复杂是必要的，其中蕴含着智慧。但是就持久化而言，它不会比`NSCoding`更简单。
+即使很多应用在某些方面_可能_受益于Core Data，让事物从简单演化到复杂是必要的，其中蕴含着智慧。但是就持久化而言，它不会比`NSCoding`更简单。
 
 [1]: http://developer.apple.com/library/mac/#documentation/cocoa/Conceptual/CoreData/cdProgrammingGuide.html
 [2]: http://developer.apple.com/library/ios/#Documentation/Cocoa/Reference/Foundation/Classes/NSKeyedArchiver_Class/Reference/Reference.html
