Add missing question marks

--- a/2013-08-12-random.md
+++ b/2013-08-12-random.md
@@ -50,7 +50,7 @@ double r = drand48();
 
 > `rand48` functions, unlike `arc4random` functions, require an initial value to be seeded before generating random numbers. This seed function, `srand48(3)`, should only be run once.
 
-## How Do I Pick a Random Element from an `NSArray`
+## How Do I Pick a Random Element from an `NSArray`?
 
 Use `arc4random_uniform(3)` to generate a random number in the range of a non-empty array.
 
@@ -60,7 +60,7 @@ if ([array count] > 0) {
 }
 ~~~
 
-## How Do I Randomly Order an `NSArray`
+## How Do I Randomly Order an `NSArray`?
 
 ~~~{objective-c}
 NSMutableArray *mutableArray = [NSMutableArray arrayWithArray:array];
