--- a/2013-08-12-random.md
+++ b/2013-08-12-random.md
@@ -41,7 +41,7 @@ NSUInteger r = arc4random_uniform(N) + 1;
 
 ### Random `double` between `0` and `1`
 
-If you are generating a random `double` or `float`, another good option are the more obscure `rand48` family of functions, including `drand48(3)`.
+If you are generating a random `double` or `float`, another good option is the more obscure `rand48` family of functions, including `drand48(3)`.
 
 ~~~{objective-c}
 srand48(time(0));
