--- a/2013-08-12-random.md
+++ b/2013-08-12-random.md
@@ -106,7 +106,7 @@ NSString *letter = [vowels substringWithRange:NSMakeRange(arc4random_uniform([vo
 
 - `arc4random` does not require an initial seed (with `srand` or `srandom`), making it that much easier to use.
 - `arc4random` has a range up to `0x100000000 (4294967296)`, whereas `rand` and `random` top out at `RAND_MAX = 0x7fffffff (2147483647)`.
-- `rand` has often been implemented in such a way that regularly cycles low bits, making it more predictable.
+- `rand` has often been implemented in a way that regularly cycles low bits, making it more predictable.
 
 ## What are `rand(3)`, `random(3)`, and `arc4random(3)`, and Where Do They Come From?
 
