--- a/2013-08-12-random.md
+++ b/2013-08-12-random.md
@@ -112,7 +112,7 @@ NSString *letter = [vowels substringWithRange:NSMakeRange(arc4random_uniform([vo
 
 - `rand` is a standard C function.
 - `random` is [defined as part of the POSIX standard](http://pubs.opengroup.org/onlinepubs/009695399/functions/initstate.html).
-- `arc4random` is provided in BSD and derived platforms.
+- `arc4random` is provided on BSD and derived platforms.
 
 ---
 
