Adjustments for Jekyll processing changes

--- a/2014-01-06-colophon.md
+++ b/2014-01-06-colophon.md
@@ -56,24 +56,26 @@ Before sending everything up to S3, I run [HTML Tidy](http://tidy.sourceforge.ne
 
 All together, the deploy script looks something like this:
 
-        jekyll build --config _config.en.yml
-        find _site/ -iname "*.html"
-            -exec tidy -config tidy.conf {} +
-        find _site/ -iname '*.html'
-            -exec gzip -n --best {} +
-        find _site/ -iname '*.xml'
-            -exec gzip -n --best {} +
+~~~ bash
+jekyll build --config _config.en.yml
+find _site/ -iname "*.html"
+    -exec tidy -config tidy.conf {} +
+find _site/ -iname '*.html'
+    -exec gzip -n --best {} +
+find _site/ -iname '*.xml'
+    -exec gzip -n --best {} +
 
-        for f in `find _site/ -iname '*.gz'`; do
-          mv $f ${f%.gz}
-        done
+for f in `find _site/ -iname '*.gz'`; do
+  mv $f ${f%.gz}
+done
 
-        s3cmd sync --progress -M --acl-public
-            --add-header 'Content-Encoding:gzip'
-            --exclude '*.*'
-            --include '*.html' --include '*.xml'
-            --verbose
-            _site/ s3://nshipster.com/
+s3cmd sync --progress -M --acl-public
+    --add-header 'Content-Encoding:gzip'
+    --exclude '*.*'
+    --include '*.html' --include '*.xml'
+    --verbose
+    _site/ s3://nshipster.com/
+~~~
 
 ### Collaboration: GitHub
 
