Revert "Use dot syntax for slightly simpler code"
This reverts commit 5a4609ea0df4654140458dbf204fbfc882b356b3.

--- a/2013-08-12-random.md
+++ b/2013-08-12-random.md
@@ -55,8 +55,8 @@ double r = drand48();
 Use `arc4random_uniform(3)` to generate a random number in the range of a non-empty array.
 
 ~~~{objective-c}
-if (array.count > 0) {
-  id obj = array[arc4random_uniform(array.count)];
+if ([array count] > 0) {
+  id obj = array[arc4random_uniform([array count])];
 }
 ~~~
 
@@ -64,7 +64,7 @@ if (array.count > 0) {
 
 ~~~{objective-c}
 NSMutableArray *mutableArray = [NSMutableArray arrayWithArray:array];
-NSUInteger count = mutableArray.count;
+NSUInteger count = [mutableArray count];
 // See http://en.wikipedia.org/wiki/Fisher–Yates_shuffle
 if (count > 1) {
   for (NSUInteger i = count - 1; i > 0; --i) {
@@ -97,7 +97,7 @@ Otherwise, a simple way to pick random letters from a set of your choosing is to
 
 ~~~{objective-c}
 NSString *vowels = @"aeiouy";
-NSString *letter = [vowels substringWithRange:NSMakeRange(arc4random_uniform(vowels.length), 1)];
+NSString *letter = [vowels substringWithRange:NSMakeRange(arc4random_uniform([vowels length]), 1)];
 ~~~
 
 ## Why Should I Use `arc4random(3)` instead of `rand(3)` or `random(3)`?
