Minor typo fixes

--- a/2013-04-01-icloud.md
+++ b/2013-04-01-icloud.md
@@ -25,7 +25,7 @@ Now, NSHipster usually covers obscure topics that you've probably never heard of
 
 iCloud is an umbrella term for the latest evolution of Apple's consumer web services. Following from the success of iTools, .Mac, and MobileMe, iCloud manages our digital lives like never before, with features like Photo Stream, iTunes Match, and Documents in the Cloud.
 
-What really ties everything together are the iCloud Storage APIs that allow developers to easily create applications to stay connected across all of your devices. These APIs come in three different flavors, depending on the particular needs of your application:
+What really ties everything together are the iCloud Storage APIs that allow developers to easily create applications that stay connected across all of your devices. These APIs come in three different flavors, depending on the particular needs of your application:
 
 > - **Key-value storage** for discrete values, such as preferences, settings, and simple app state.
 > - **Document storage** for user-visible file-based information such as word processing documents, drawings, and complex app state.
