--- a/2013-10-14-nserror.md
+++ b/2013-10-14-nserror.md
@@ -7,7 +7,7 @@ rating: 9.5
 description: "NSError is the unsung hero of the Foundation framework. Passed gallantly in and out of perilous method calls, it is the messenger by which we are able to contextualize our failures."
 ---
 
-> To err is human.  
+> To err is human.
 > To `NSError` is Cocoa.
 
 All programs on a Unix system are a child process of another process, forking all the way from the original process, the unmoved mover: `pid` 1 (which in the case of Mac OS X is `launchd`). When the executable finishes, it communicates a status code between `0` and `255` to its parent, as a way to communicate why or how the process exited. `0` means "everything exited normally; nothing to report here", while any non-zero value indicates something that the parent process should be aware of. Exit status codes may be used to indicate whether the process crashed, or terminated prematurely. By some conventions, the higher the return value, the more severe the cause of the error.
@@ -30,7 +30,7 @@ Like exit status codes, an `NSError -code` signals the nature of the problem. Th
 
 For example, in the `NSCocoaErrorDomain`, the status code for an error caused by `NSFileManager` attempting to access a non-existant file is `4`, as defined by `NSFileNoSuchFileError`. However, `4` in `NSPOSIXErrorDomain` refers to a [POSIX `EINTR`, or "interupted function" error](http://250bpm.com/blog:12).
 
-Now, anyone coming from a systems programming background may have just had a vision of a `switch` statement with smatterings of `printf` to translate numeric constants into something human-readable. `NSError` is way ahead of you.  
+Now, anyone coming from a systems programming background may have just had a vision of a `switch` statement with smatterings of `printf` to translate numeric constants into something human-readable. `NSError` is way ahead of you.
 
 ## `userInfo`
 
@@ -48,7 +48,7 @@ Three are generally useful:
 - `recoveryAttempter` (`NSRecoveryAttempterErrorKey`)
 - `helpAnchor` (`NSHelpAnchorErrorKey`): Used by an alert panel by a help anchor button.
 
-Here's how to construct `NSError` with a `userInfo` dictionary: 
+Here's how to construct `NSError` with a `userInfo` dictionary:
 
 ~~~{objective-c}
 NSDictionary *userInfo = @{
@@ -56,8 +56,8 @@ NSDictionary *userInfo = @{
   NSLocalizedFailureReasonErrorKey: NSLocalizedString(@"The operation timed out.", nil),
   NSLocalizedRecoverySuggestionErrorKey: NSLocalizedString(@"Have you tried turning it off and on again?", nil)
                           };
-NSError *error = [NSError errorWithDomain:NSHipsterErrorDomain 
-                                     code:-57 
+NSError *error = [NSError errorWithDomain:NSHipsterErrorDomain
+                                     code:-57
                                  userInfo:userInfo];
 ~~~
 
@@ -130,20 +130,20 @@ One would be well-advised to follow the same conventions for error handling as o
 To pass an error to an `NSError **` parameter, do the following:
 
 ~~~{objective-c}
-- (BOOL)validateObject:(id)object 
+- (BOOL)validateObject:(id)object
                  error:(NSError * __autoreleasing *)error
 {
-    // ...
+    BOOL success = ...;
 
-    if (error) {
-      *error = [NSError errorWithDomain:NSHipsterErrorDomain 
-                                   code:-42
-                               userInfo:nil];
-
-      return NO;
+    if (!success) {
+      if (error) {
+        *error = [NSError errorWithDomain:NSHipsterErrorDomain
+                                     code:-42
+                                 userInfo:nil];
+      }
     }
 
-    return YES;
+    return success;
 }
 ~~~
 
@@ -506,7 +506,7 @@ As such, here is an exhaustive, well-formatted table at your disposal:
 
 <tr><td rowspan="3">-73000L</td><td><tt>kCFNetServiceErrorDNSServiceFailure</tt></td></tr>
 <tr><td></td></tr>
-<tr><td><q>An error from DNS discovery; look at <tt>kCFDNSServiceFailureKey</tt> to get the error number and interpret using <tt>dnssd.h</tt></q><td></td> 
+<tr><td><q>An error from DNS discovery; look at <tt>kCFDNSServiceFailureKey</tt> to get the error number and interpret using <tt>dnssd.h</tt></q><td></td>
 </table>
 
 * * *
