Remove extra parentheses.

--- a/2013-05-06-gpuimage.md
+++ b/2013-05-06-gpuimage.md
@@ -247,7 +247,7 @@ GPUImageFilter *filter = [[GPUImageLevelsFilter alloc] initWithFragmentShaderFro
 [filter setBlueMin:0.114 gamma:1.0 max:1.0 minOut:0.0 maxOut:1.0];
 [videoCamera addTarget:filter];
 
-GPUImageView *filteredVideoView = [[GPUImageView alloc] initWithFrame:self.view.bounds)];
+GPUImageView *filteredVideoView = [[GPUImageView alloc] initWithFrame:self.view.bounds];
 [filter addTarget:filteredVideoView];
 [self.view addSubView:filteredVideoView];
 
