--- a/2012-09-03-nslocale.md
+++ b/2012-09-03-nslocale.md
@@ -84,9 +84,9 @@ While this all may seem like fairly esoteric stuff, you may be surprised by the 
 
 It's the small things, like knowing that quotation marks vary between locales:
 
-> English: “I can eat glass, it doesn't harm me.”
-> German: „Ich kann Glas essen, das tut mir nicht weh.“
-> Japanese:「私はガラスを食べられます。それは私を傷つけません。」
+- English: “I can eat glass, it doesn't harm me.”
+- German: „Ich kann Glas essen, das tut mir nicht weh.“
+- Japanese:「私はガラスを食べられます。それは私を傷つけません。」
 
 So if you were building a component that added quotations around arbitrary text, you should use `NSLocaleQuotationBeginDelimiterKey` and `NSLocaleAlternateQuotationEndDelimiterKey` rather than assuming `@"\""` for English quotation marks.
 
@@ -100,8 +100,8 @@ NSLog(@"fr_FR: %@", [frLocale displayNameForKey:NSLocaleIdentifier value:@"fr_FR
 NSLog(@"en_US: %@", [frLocale displayNameForKey:NSLocaleIdentifier value:@"en_US"]);
 ~~~
 
-> fr_FR: français (France)
-> en_US: anglais (États-Unis)
+- fr_FR: français (France)
+- en_US: anglais (États-Unis)
 
 You should use this method any time you need to display information about the user's current locale, or any alternative locales available to them, like in this screen from the Settings app:
 
