Fixing formatting errors

--- a/2013-12-30-new-years-2014.md
+++ b/2013-12-30-new-years-2014.md
@@ -245,7 +245,9 @@ NSString *keyPath = PTPKeyPathForSelectors(@selector(data), @selector(name), nil
 
 And finally, [Matthew Teece](https://github.com/mteece) gives a shout-out to [Nomad](http://nomad-cli.com), a world-class collection of command-line utilities—specifically, [Houston](https://github.com/nomad/houston), which can send and manage push notifications from the command line, or within your Ruby application.
 
-        $ apn push "<token>" -c /path/to/cert.pem -m "Hello!"
+~~~{bash}
+$ apn push "<token>" -c /path/to/cert.pem -m "Hello!"
+~~~
 
 * * *
 
