--- a/2014-03-24-nsurl.md
+++ b/2014-03-24-nsurl.md
@@ -140,7 +140,7 @@ NSURL *baseURL = [NSURL URLWithString:@"http://example.com/v1/"];
 
 苹果在 iOS 7 和 Mac OS X 10.9 Mavericks 中悄悄添加了 `NSURLComponents`，这样就可以完美替代 `NSMutableURL` 了。但文档还不是很完善，所以这个类仍然是近期Foundation新增类中隐晦的一块。
 
-创建 `NSURLComponents` 实例和创建 `NSURL` 实例的方法差不多，通过一个 `NSString` 和一个非必需的base URL参数创建(`+componentsWithString:` & `+componentsWithString:resolvingAgainstBaseURL:`)。也可以用 `alloc init` 创建一个空的容器，和[`NSDateComponents`](http://nshipster.com/nsdatecomponents/)差不多。
+创建 `NSURLComponents` 实例和创建 `NSURL` 实例的方法差不多，通过一个 `NSString` 和一个非必需的base URL参数创建(`+componentsWithString:` & `+componentsWithURL:resolvingAgainstBaseURL:`)。也可以用 `alloc init` 创建一个空的容器，和[`NSDateComponents`](http://nshipster.com/nsdatecomponents/)差不多。
 
 `NSURL` 和 `NSURLComponents` 的不同之处在于，URL component属性是 `readwrite` 的。它提供了安全直接的方法来修改URL的各个部分：
 
