--- a/2013-05-06-gpuimage.md
+++ b/2013-05-06-gpuimage.md
@@ -249,7 +249,7 @@ GPUImageFilter *filter = [[GPUImageLevelsFilter alloc] initWithFragmentShaderFro
 
 GPUImageView *filteredVideoView = [[GPUImageView alloc] initWithFrame:self.view.bounds];
 [filter addTarget:filteredVideoView];
-[self.view addSubView:filteredVideoView];
+[self.view addSubview:filteredVideoView];
 
 [videoCamera startCameraCapture];
 ~~~
