Remove extra "the"

--- a/2014-06-09-ios8.md
+++ b/2014-06-09-ios8.md
@@ -6,7 +6,7 @@ framework: ""
 description: "Ask anyone, and they'll tell you: WWDC 2014 was the one of the most exciting in recent memory. This week, we'll take a look beneath the headline features, and share some of the more obscure APIs that everyone should know about."
 ---
 
-Ask anyone, and they'll tell you: WWDC 2014 was the one of the most exciting in recent memory. It was, first and foremost, a developer event, with nary a hardware announcement to upstage the latest software & developer tools.
+Ask anyone, and they'll tell you: WWDC 2014 was one of the most exciting in recent memory. It was, first and foremost, a developer event, with nary a hardware announcement to upstage the latest software & developer tools.
 
 And boy howdy, was there a lot to be excited about.
 
