--- a/2014-06-09-ios8.md
+++ b/2014-06-09-ios8.md
@@ -35,7 +35,7 @@ Keep in mind, however, that a test for capability, such as with `SomeClass.class
 
 ## New NSFormatter Subclasses
 
-One the features most sorely lacking in Foundation was the ability to work with units for quantities like mass or length. In iOS 8 and OS X Yosemite, three new classes were introduced that fills the gap: `NSEnergyFormatter`, `NSMassFormatter`, & `NSLengthFormatter`.
+One the features most sorely lacking in Foundation was the ability to work with units for quantities like mass or length. In iOS 8 and OS X Yosemite, three new classes were introduced that fill the gap: `NSEnergyFormatter`, `NSMassFormatter`, & `NSLengthFormatter`.
 
 > This effectively doubles the number of [`NSFormatter`](http://nshipster.com/nsformatter/) subclasses in Foundation, which was previously limited to `NSNumberFormatter`, `NSDateFormatter`, & `NSByteCountFormatter`.
 
