--- a/2014-06-09-ios8.md
+++ b/2014-06-09-ios8.md
@@ -368,5 +368,5 @@ if ([context canEvaluatePolicy:LAPolicyDeviceOwnerAuthenticationWithBiometrics
 
 Although it seems like all that anyone can talk about these days is Swift, it'd be a shame if we ignored all of the neat things iOS 8 & OS X Yosemite allow us to actually _do_ with this new language.
 
-If you're feeling adventurous, [dive into the iOS 7.1 to 8.0 API diffs](https://developer.apple.com/library/prerelease/ios/releasenotes/General/iOS80APIDiffs/index.html#//apple_ref/doc/uid/TP40014455) to really appreciate the magnitude of new technologies to discover. _Granted, of the 4000+ new APIs, at least half of those are slight changes to Accelerate functions or methods becoming properties, but still..._ Have at it!
+If you're feeling adventurous, [dive into the iOS 7.1 to 8.0 API diffs](https://developer.apple.com/library/prerelease/ios/releasenotes/General/iOS80APIDiffs/index.html#//apple_ref/doc/uid/TP40014455) to really appreciate the magnitude of new technologies to discover. _Granted, of the 4000+ new APIs, at least half of those are slight changes to Accelerate functions, or methods becoming properties, but still..._ Have at it!
 
