Fixing code example for bound stream pair

--- a/2014-06-09-ios8.md
+++ b/2014-06-09-ios8.md
@@ -181,8 +181,8 @@ NSHipster将会在未来探讨更多的HealthKit，敬请关注！
 在许多方面，WWDC 2014也是苹果查漏补遗的一年，比如给`NSStream`添加了新的initializer（再也不用调用`CFStreamCreatePairWithSocketToHost`了），这就是：`+[NSStream getStreamsToHostWithName:port:inputStream:outputStream:]`
 
 ~~~{javascript}
-var inputStream: NSInputStream
-var outputStream: NSOutputStream
+var inputStream: NSInputStream?
+var outputStream: NSOutputStream?
 
 NSStream.getStreamsToHostWithName(hostname: "nshipster.com",
                                       port: 5432,
