Updating iOS 8 article

--- a/2014-06-09-ios8.md
+++ b/2014-06-09-ios8.md
@@ -24,7 +24,7 @@ This week, we'll take a look beneath the headline features, and share some of th
 
 Forget `[[UIDevice currentDevice] systemVersion]` and `NSFoundationVersionNumber`, there's a new way to determine the current operating system in code: `NSProcessInfo -isOperatingSystemAtLeastVersion`
 
-~~~{javascript}
+~~~{swift}
 import Foundation
 
 let yosemite = NSOperatingSystemVersion(majorVersion: 10, minorVersion: 10, patchVersion: 0)
@@ -45,7 +45,7 @@ Although these new formatter classes are part of Foundation, they were added pri
 
 `NSEnergyFormatter` formats energy in Joules, the raw unit of work for exercises, and Calories, which is used when working with nutrition information.
 
-~~~{javascript}
+~~~{swift}
 let energyFormatter = NSEnergyFormatter()
 energyFormatter.forFoodEnergyUse = true
 
@@ -57,7 +57,7 @@ println(energyFormatter.stringFromJoules(joules)) // "2.39 Cal"
 
 Although the fundamental unit of physical existence, mass is pretty much relegated to tracking the weight of users in HealthKit. Yes, mass and weight are different, but this is programming, not science class, so stop being pedantic.
 
-~~~{javascript}
+~~~{swift}
 let massFormatter = NSMassFormatter()
 let kilograms = 60.0
 println(massFormatter.stringFromKilograms(kilograms)) // "132 lb"
@@ -67,7 +67,7 @@ println(massFormatter.stringFromKilograms(kilograms)) // "132 lb"
 
 Rounding out the new `NSFormatter` subclasses is `NSLengthFormatter`. Think of it as a more useful version of `MKDistanceFormatter`, with more unit options and formatting options.
 
-~~~{javascript}
+~~~{swift}
 let lengthFormatter = NSLengthFormatter()
 let meters = 5_000.0
 println(lengthFormatter.stringFromMeters(meters)) // "3.107 mi"
@@ -79,7 +79,7 @@ Continuing on iOS 8's health kick, `CMStepCounter` is revamped in the latest rel
 
 It's amazing what that M7 chip is capable of.
 
-~~~{javascript}
+~~~{swift}
 import CoreMotion
 
 let lengthFormatter = NSLengthFormatter()
@@ -102,7 +102,7 @@ pedometer.startPedometerUpdatesFromDate(NSDate(), withHandler: { data, error in
 
 On supported devices, a `CMPedometer`'s stats on `floorsAscended` / `floorsDescended` can be augmented with `CMAltimeter` to get a more granular look at vertical distance traveled:
 
-~~~{javascript}
+~~~{swift}
 import CoreMotion
 
 let altimeter = CMAltimeter()
@@ -119,7 +119,7 @@ if CMAltimeter.isRelativeAltitudeAvailable() {
 
 `CLFloor` is a new API in iOS 8 that ties the new features in CoreMotion with Apple's ambitious plan to map the interiors of the largest buildings in the world. Look for this information to play a significant role in future hyperlocal mapping applications.
 
-~~~{javascript}
+~~~{swift}
 import CoreLocation
 
 class LocationManagerDelegate: NSObject, CLLocationManagerDelegate {
@@ -144,7 +144,7 @@ HealthKit manages your biometrics from all of your devices in a single unified A
 
 The following example shows how statistics summed over the duration of the day can be grouped and interpreted individually:
 
-~~~{javascript}
+~~~{swift}
 import HealthKit
 
 let collection: HKStatisticsCollection? = ...
@@ -180,7 +180,7 @@ NSHipster will be covering a lot more about HealthKit in future editions, so sta
 
 In many ways, WWDC 2014 was the year that Apple _fixed their shit_. Small things, like adding the missing `NSStream` initializer for creating a bound stream pair (without resorting to awkwardly-bridged `CFStreamCreatePairWithSocketToHost` call). Behold: `+[NSStream getStreamsToHostWithName:port:inputStream:outputStream:]`
 
-~~~{javascript}
+~~~{swift}
 var inputStream: NSInputStream?
 var outputStream: NSOutputStream?
 
@@ -194,7 +194,7 @@ NSStream.getStreamsToHostWithName("nshipster.com",
 
 Also filed under: "small but solid fixes", is this convenience method for `NSString`:
 
-~~~{javascript}
+~~~{swift}
 let string: NSString = "Café"
 let substring: NSString = "É"
 
@@ -240,7 +240,7 @@ What's even nerdier than Ruby annotations? The new calendar identifiers added to
 
 The Foundation URL Loading System has remained relatively unchanged since last year's `NSURLSession` blowout. However, `NSURLCredentialStorage` has been given some TLC, with new functions that get and set credentials for tasks in asynchronous, non-blocking fashion.
 
-~~~{javascript}
+~~~{swift}
 import Foundation
 
 let session = NSURLSession()
@@ -258,7 +258,7 @@ NSURLCredentialStorage.getCredentialsForProtectionSpace(protectionSpace: protect
 
 Looking through the latest API diffs, one might notice the large number of new [UTIs](http://en.wikipedia.org/wiki/Uniform_Type_Identifier) constants. One that caught my eye was `kUTTypeToDoItem`:
 
-~~~{javascript}
+~~~{swift}
 import MobileCoreServices
 
 kUTTypeToDoItem // "public.to-do-item"
@@ -306,7 +306,7 @@ CFRelease(imageDestinationRef);
 
 `WKWebView` offers Safari-level performance to your own app, and further improves on `UIWebView` with preferences and configurations:
 
-~~~{javascript}
+~~~{swift}
 import WebKit
 
 let preferences = WKPreferences()
